# yew-scaffold

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  Procfile.dev  README.md  Trunk.toml  Untitled-1.rs  contract_client.js  index.html  package-lock.json  package.json  stellar-client-src.ts  stellar-client.ts  tsconfig.json  vercel.json
.claude/: settings.local.json
backend/: Cargo.toml  README_XDR.md
backend/migrations/: 001_create_users_table.sql  002_add_auth_fields.sql
backend/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  types.rs  utils.rs  xdr_generator.rs
backend/src/auth/: cookies.rs  jwt.rs  mod.rs  password.rs
backend/src/database/: connection.rs  mod.rs  models.rs
backend/src/database/repositories/: user_repository.rs
backend/src/extractors/: current_user.rs  mod.rs
backend/src/handlers/: auth.rs  soroban.rs
backend/src/middleware/: auth.rs  mod.rs  require_role.rs
backend/src/services/: auth_service.rs  mod.rs  stellar.rs
backend/src/services/soroban/: cache.rs  circuit_breaker.rs  client.rs  events.rs  manager.rs  mod.rs  pool.rs  queue.rs  registry.rs  simulation.rs  state.rs
backend/tests/: auth_tests.rs  health_tests.rs  middleware_tests.rs  repository_tests.rs  soroban_tests.rs
backend/tests/common/: mod.rs
contract-bindings/: index.js
examples/: contract_interactions.rs  wallet_integration.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  router.rs  state.rs  state_test.rs  styles.css  types.rs  types_test.rs
frontend/src/components/: about.rs  blend.rs  contract.rs  live_price_feed.rs  mod.rs  navigation.rs  reflector_oracle.rs  soroban_metrics.rs  soroban_metrics_live.rs  soroban_test.rs  wallet.rs
frontend/src/pages/: home.rs  login.rs  mod.rs
frontend/src/services/: api.rs  mod.rs  soroban_api.rs  transaction.rs
frontend/src/wallet/: freighter.rs  mod.rs
frontend/tests/: browser_apis.rs  freighter_integration.rs
reference/: README.md  WASM_TESTING_GUIDE.md
scripts/: dev.bat
shared/: Cargo.toml
shared/src/dto/: auth.rs  common.rs  mod.rs  soroban.rs  user.rs
src/: freighter.rs  helloworld_bindings.rs  home.rs  main.rs  mod.rs  nav.rs  package-lock.json  package.json  routes - Copy.rs  wallet.rs
static/: stellar-client.js
templates/: api_handler_template.rs  component_template.rs  wallet_template.rs
