[package]
name = "yew-scaffold"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
js-sys = "0.3.77"
stylist = "0.13"
serde-wasm-bindgen = "=0.6.5"
