[package]
name = "yew-scaffold"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Yew Soroban Template Contributors"]
description = "A Rust-based template for building decentralized applications on Stellar using Yew and Soroban"
repository = "https://github.com/trilltino/yew-scaffold"
keywords = ["yew", "stellar", "soroban", "dapp", "rust", "wasm"]
categories = ["web-programming", "wasm"]
readme = "README.md"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
stylist = "0.13"
serde-wasm-bindgen = "0.6.5"
gloo = "0.11"
