[package]
name = "yew-scaffold"
version = "0.1.0"
edition = "2021"
description = "Simplified Stellar Soroban dApp with Freighter integration"

[dependencies]
# Core Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# HTTP requests
gloo-net = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Error handling and debugging
console_error_panic_hook = "0.1"

# Async traits for wallet abstraction
async-trait = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "HtmlSelectElement",
  "EventTarget",
]