[package]
name = "yew-scaffold"
version = "0.1.0"
edition = "2021"
description = "Simplified Stellar Soroban dApp with Freighter integration"

[dependencies]
# Core Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# HTTP requests
gloo-net = "0.6"
gloo = "0.11"
gloo-timers = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Date/time formatting
chrono = { version = "0.4", features = ["wasmbind"] }

# Error handling and debugging
console_error_panic_hook = "0.1"

# Shared DTOs
shared = { path = "../shared" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "HtmlSelectElement",
  "HtmlInputElement",
  "EventTarget",
  "InputEvent",
]
[dev-dependencies]
wasm-bindgen-test = "0.3.0"
